# python3_practice_pandas_data_analysis

./: README.md
introProject/: Intro.ipynb  hello.py  intro2.ipynb  intro3.py  linearregression.pickle  machine_learning_notebook01.ipynb  pyproject.toml  vid3and4.ipynb  vid5.ipynb  vid6.ipynb  yfinanceGetter.py
introProject/notebooks/: Intro.ipynb  backtestingpypractice.ipynb  backtraderPractice01.ipynb  intro2.ipynb  vid4.ipynb  vid5.ipynb  vid8.ipynb
introProject/practice_python_files/: backtestingPractice01.py  intro3fork.py  vid14.py  vid15.py  vid6.py  vid8.py
introProject/practice_python_files/datasets/breast+cancer+wisconsin+original/: breast-cancer-wisconsin.data  unformatted-data
introProject/practice_python_files/strategies/: strategy001.py
