[project]
name = "introproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "itables>=2.2.4",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "scikit-learn>=1.6.0",
    "yfinance>=0.2.51",
]
